--- a/Examples/BVSDKDemo/BVSDKDemo/HomeAdvertisementCollectionViewCell.xib
+++ b/Examples/BVSDKDemo/BVSDKDemo/HomeAdvertisementCollectionViewCell.xib
@@ -20,6 +20,11 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="297" id="ohE-Z7-vRv"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="ohE-Z7-vRv"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Revolution Cycling Tours" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwV-53-nZF">
                                 <rect key="frame" x="8" y="6" width="189" height="21"/>
@@ -30,11 +35,11 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sponsored" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CUR-7K-4L4">
                                 <rect key="frame" x="8" y="118" width="52" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <color key="textColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save 30% with code REVO1" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbq-I2-ggF">
-                                <rect key="frame" x="167" y="98" width="122" height="34"/>
+                                <rect key="frame" x="167" y="98.5" width="122" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -53,6 +58,7 @@
                             <constraint firstItem="sbq-I2-ggF" firstAttribute="leading" secondItem="IbK-aE-zCQ" secondAttribute="trailing" constant="-17" id="KPJ-Fh-VF7"/>
                             <constraint firstItem="gwV-53-nZF" firstAttribute="leading" secondItem="Wcf-Zi-LP8" secondAttribute="leading" constant="8" id="OKI-os-NaI"/>
                             <constraint firstItem="gwV-53-nZF" firstAttribute="top" secondItem="Wcf-Zi-LP8" secondAttribute="top" constant="6" id="XKJ-Ae-VGX"/>
+                            <constraint firstItem="IbK-aE-zCQ" firstAttribute="leading" secondItem="Peg-Of-7ll" secondAttribute="leading" constant="8" id="Zc0-Yn-cfj"/>
                             <constraint firstAttribute="bottom" secondItem="CUR-7K-4L4" secondAttribute="bottom" constant="4" id="aAd-aN-V8H"/>
                             <constraint firstItem="Peg-Of-7ll" firstAttribute="leading" secondItem="gwV-53-nZF" secondAttribute="leading" constant="-8" id="ajn-92-9EF"/>
                             <constraint firstItem="Peg-Of-7ll" firstAttribute="top" secondItem="gwV-53-nZF" secondAttribute="bottom" constant="-28" id="hcZ-tu-Pg1"/>
@@ -61,6 +67,13 @@
                             <constraint firstItem="Peg-Of-7ll" firstAttribute="bottom" secondItem="CUR-7K-4L4" secondAttribute="bottom" constant="4" id="rpC-cX-xpC"/>
                             <constraint firstItem="IbK-aE-zCQ" firstAttribute="leading" secondItem="Peg-Of-7ll" secondAttribute="trailing" constant="-289" id="tBF-Wm-Cxb"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="OKI-os-NaI"/>
+                                <exclude reference="tBF-Wm-Cxb"/>
+                                <exclude reference="KPJ-Fh-VF7"/>
+                            </mask>
+                        </variation>
                         <connections>
                             <outlet property="bodyView" destination="IbK-aE-zCQ" id="IJL-tL-nEe"/>
                             <outlet property="headlineView" destination="gwV-53-nZF" id="2sO-re-vee"/>
@@ -76,8 +89,9 @@
                 <constraint firstAttribute="trailing" secondItem="Peg-Of-7ll" secondAttribute="trailing" constant="8" id="2g5-X1-Za3"/>
                 <constraint firstAttribute="bottom" secondItem="Peg-Of-7ll" secondAttribute="bottom" constant="10" id="4Wb-V4-cjI"/>
                 <constraint firstAttribute="bottom" secondItem="sbq-I2-ggF" secondAttribute="bottom" constant="12" id="GhC-yG-KnN"/>
+                <constraint firstItem="Peg-Of-7ll" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="7" id="NFC-51-fV3"/>
                 <constraint firstAttribute="bottom" secondItem="Wcf-Zi-LP8" secondAttribute="bottom" constant="10" id="REy-UD-cpG"/>
-                <constraint firstItem="IbK-aE-zCQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="Sv8-jP-Vka"/>
+                <constraint firstItem="Peg-Of-7ll" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="Tlw-Z8-oFg"/>
                 <constraint firstItem="Wcf-Zi-LP8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="YVr-us-eJn"/>
                 <constraint firstAttribute="bottom" secondItem="Peg-Of-7ll" secondAttribute="bottom" constant="10" id="Zop-X8-dJn"/>
                 <constraint firstAttribute="trailing" secondItem="Wcf-Zi-LP8" secondAttribute="trailing" constant="8" id="fYn-rg-6Uo"/>
@@ -85,6 +99,11 @@
                 <constraint firstItem="Wcf-Zi-LP8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="zYz-dc-wdF"/>
             </constraints>
             <size key="customSize" width="313" height="152"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="4Wb-V4-cjI"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="nativeContentAdView" destination="Wcf-Zi-LP8" id="46v-QY-5ci"/>
             </connections>
