--- a/Examples/BVSDKDemo/BVSDKDemo/Product Recommendations/View Controllers/ProductPageButtonCell.xib
+++ b/Examples/BVSDKDemo/BVSDKDemo/Product Recommendations/View Controllers/ProductPageButtonCell.xib
@@ -16,8 +16,9 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fF3-j7-Aeq">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="45" id="F8o-Ua-LhG"/>
                             <constraint firstAttribute="width" secondItem="fF3-j7-Aeq" secondAttribute="height" multiplier="80:10" id="Ngk-iI-iHJ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="14"/>
@@ -29,6 +30,11 @@
                         <state key="highlighted">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Ngk-iI-iHJ"/>
+                            </mask>
+                        </variation>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9co-wA-WQQ">
                         <rect key="frame" x="0.0" y="54" width="320" height="1"/>
@@ -44,14 +50,14 @@
                         </variation>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eYL-Nq-Rmq">
-                        <rect key="frame" x="10" y="10" width="20" height="20"/>
+                        <rect key="frame" x="10" y="12.5" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="fKt-RJ-gfc"/>
                             <constraint firstAttribute="height" constant="20" id="mcR-WD-hGo"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jhz-oz-kbo">
-                        <rect key="frame" x="292" y="10" width="20" height="20"/>
+                        <rect key="frame" x="292" y="12.5" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="gVh-Bw-j4U"/>
                             <constraint firstAttribute="height" constant="20" id="qCo-vT-5To"/>
