Adding in BV Pixel documentation for all new events. Add in BVSDK API key config file generator code.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,4 +213,16 @@ step
 	flex-direction: column;
 }
 
+th {
+    background-color: #003d4c;
+    color: white;
+} 
 
+table {
+	width: 95%;
+ 	margin:0 auto;
+}
+
+.borderless td, .borderless th {
+    border: none;
+}
